[gd_scene load_steps=25 format=3 uid="uid://bbanttujs27cg"]

[ext_resource type="PackedScene" uid="uid://c8731mv31x17n" path="res://Levels/game_ui.tscn" id="1_6q5p7"]
[ext_resource type="Script" path="res://Scripts/GameCamera.gd" id="2_dhowv"]
[ext_resource type="Texture2D" uid="uid://13kjd5ecbtub" path="res://Assets/Textures/gui/cursors/dot.png" id="3_8rjix"]
[ext_resource type="Script" path="res://Scripts/MouseCursor.gd" id="4_kbr63"]
[ext_resource type="Script" path="res://Scripts/PlayerInputs.gd" id="5_i1ors"]
[ext_resource type="Script" path="res://Scripts/sound_effects.gd" id="6_ew06n"]
[ext_resource type="Texture2D" uid="uid://b5vi2ybetnpxn" path="res://Assets/Textures/Levels/level2/background.png" id="7_m35r0"]
[ext_resource type="AudioStream" uid="uid://xtuw64tf35cm" path="res://SFX/cut sound.mp3" id="7_vv6dv"]
[ext_resource type="Script" path="res://Scripts/CutoutManager.gd" id="8_i4ols"]
[ext_resource type="AudioStream" uid="uid://5l5f36rry05g" path="res://SFX/wood pickup sound.mp3" id="8_l3gai"]
[ext_resource type="AudioStream" uid="uid://cx5isow5rg3vt" path="res://SFX/wood drop sound.mp3" id="9_3im6q"]
[ext_resource type="Script" path="res://Scripts/InteractiveObjects.gd" id="9_fxxgm"]
[ext_resource type="AudioStream" uid="uid://eaol8utpthn4" path="res://SFX/Theme.mp3" id="10_2qtbn"]
[ext_resource type="Shader" path="res://Assets/Shaders/Outline.gdshader" id="10_jay5l"]
[ext_resource type="Texture2D" uid="uid://v5nsga7amsh0" path="res://Assets/Textures/Levels/level2/pipe.png" id="11_n17t8"]
[ext_resource type="Texture2D" uid="uid://b8vkyknv12ni4" path="res://Assets/Textures/Levels/level2/n.png" id="12_s2jfo"]
[ext_resource type="Texture2D" uid="uid://dsh854bjxm3gl" path="res://Assets/Textures/Levels/level2/pas.png" id="13_iahgf"]
[ext_resource type="Shader" path="res://Assets/Shaders/Shadow.gdshader" id="16_h6mwf"]
[ext_resource type="Texture2D" uid="uid://cmp1nqksjoy0k" path="res://Assets/Textures/Levels/level0/bed.png" id="17_ocpiw"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wfe1j"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(25, 1, 1)
gravity = Vector3(0, -98, 0)
turbulence_enabled = true
turbulence_noise_scale = 44.795

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ep6wc"]
shader = ExtResource("10_jay5l")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 10.0
shader_parameter/opacity = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8b7f0"]
shader = ExtResource("16_h6mwf")
shader_parameter/shadow_color = Color(0, 0, 0, 0.407843)
shader_parameter/shadow_offset = Vector2(15, -15)
shader_parameter/shadow_only = true
shader_parameter/opacity = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fdyqc"]
shader = ExtResource("10_jay5l")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 10.0
shader_parameter/opacity = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l3ot1"]
shader = ExtResource("10_jay5l")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 10.0
shader_parameter/opacity = null

[node name="Node2D" type="Node2D"]

[node name="MainMenu" parent="." instance=ExtResource("1_6q5p7")]

[node name="GameCamera" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(583, 331)
position_smoothing_speed = 1.0
script = ExtResource("2_dhowv")

[node name="MouseCursor" type="Sprite2D" parent="."]
unique_name_in_owner = true
z_index = 4096
position = Vector2(-2, -2)
scale = Vector2(0.695, 0.695)
texture = ExtResource("3_8rjix")
script = ExtResource("4_kbr63")

[node name="PlayerInputManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_i1ors")

[node name="SFX" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_ew06n")

[node name="cut" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("7_vv6dv")

[node name="pickup" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("8_l3gai")

[node name="drop" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("9_3im6q")

[node name="main_theme" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("10_2qtbn")
volume_db = -15.0
autoplay = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
z_as_relative = false
position = Vector2(192, 228)
process_material = SubResource("ParticleProcessMaterial_wfe1j")
texture = ExtResource("3_8rjix")
lifetime = 5.0

[node name="Puzzle" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(350, 332)
scale = Vector2(0.355062, 0.355062)

[node name="Background" type="Sprite2D" parent="Puzzle"]
texture = ExtResource("7_m35r0")

[node name="CutoutManager" type="Node2D" parent="Puzzle"]
unique_name_in_owner = true
script = ExtResource("8_i4ols")

[node name="pipe" type="Area2D" parent="Puzzle/CutoutManager"]
z_index = 1
script = ExtResource("9_fxxgm")
dependencies_paths = Array[NodePath]([NodePath("../n"), NodePath("../pas")])

[node name="Sprite" type="Sprite2D" parent="Puzzle/CutoutManager/pipe"]
material = SubResource("ShaderMaterial_ep6wc")
position = Vector2(0, -0.75188)
texture = ExtResource("11_n17t8")

[node name="Sprite_shadow" type="Sprite2D" parent="Puzzle/CutoutManager/pipe"]
material = SubResource("ShaderMaterial_8b7f0")
position = Vector2(-985.743, -935.048)
scale = Vector2(2.81641, 2.81641)
texture = ExtResource("17_ocpiw")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Puzzle/CutoutManager/pipe"]
position = Vector2(-722.504, -507.011)
polygon = PackedVector2Array(293, 133, 196, 143, 190, 143, 161, 153, 159, 153, 152, 166, 151, 166, 140, 218, 139, 218, 133, 307, 132, 307, 135, 401, 135, 415, 146, 492, 146, 498, 176, 577, 176, 579, 232, 644, 232, 645, 302, 679, 302, 680, 395, 695, 395, 696, 465, 694, 476, 694, 553, 679, 557, 679, 627, 650, 630, 650, 687, 617, 689, 617, 793, 534, 795, 534, 992, 333, 992, 332, 1070, 278, 1070, 277, 1149, 246, 1149, 245, 1227, 226, 1227, 225, 1269, 220, 1306, 220, 1347, 226, 1353, 226, 1368, 217, 1369, 217, 1373, 205, 1374, 205, 1373, 191, 1373, 186, 1361, 166, 1361, 164, 1336, 155, 1336, 154, 1311, 162, 1311, 163, 1261, 160, 1211, 160, 1124, 167, 1114, 167, 1009, 191, 1003, 191, 889, 242, 887, 242, 626, 422, 626, 423, 530, 464, 511, 464, 495, 446, 494, 446, 496, 270, 496, 252, 478, 161, 478, 158, 464, 148, 464, 147, 420, 138, 420, 137, 293, 132)

[node name="n" type="Area2D" parent="Puzzle/CutoutManager"]
z_index = 1
script = ExtResource("9_fxxgm")

[node name="Sprite" type="Sprite2D" parent="Puzzle/CutoutManager/n"]
material = SubResource("ShaderMaterial_fdyqc")
position = Vector2(0, -0.75188)
texture = ExtResource("12_s2jfo")

[node name="Sprite_shadow" type="Sprite2D" parent="Puzzle/CutoutManager/n"]
material = SubResource("ShaderMaterial_8b7f0")
position = Vector2(-3762, -3568.53)
scale = Vector2(7.93216, 7.93216)
texture = ExtResource("17_ocpiw")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Puzzle/CutoutManager/n"]
position = Vector2(-722.504, -507.011)
polygon = PackedVector2Array(430, 913, 499, 913, 540, 851, 541, 851, 430, 849)

[node name="pas" type="Area2D" parent="Puzzle/CutoutManager"]
z_index = 1
script = ExtResource("9_fxxgm")

[node name="Sprite" type="Sprite2D" parent="Puzzle/CutoutManager/pas"]
material = SubResource("ShaderMaterial_l3ot1")
position = Vector2(0, -0.75188)
texture = ExtResource("13_iahgf")

[node name="Sprite_shadow" type="Sprite2D" parent="Puzzle/CutoutManager/pas"]
material = SubResource("ShaderMaterial_8b7f0")
position = Vector2(-33602.8, -31874.7)
scale = Vector2(62.9192, 62.9192)
texture = ExtResource("17_ocpiw")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Puzzle/CutoutManager/pas"]
position = Vector2(-722.504, -507.011)
polygon = PackedVector2Array(657, 920, 830, 920, 830, 840, 657, 840)

[connection signal="mouse_shape_entered" from="Puzzle/CutoutManager/pipe" to="Puzzle/CutoutManager/pipe" method="_on_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="Puzzle/CutoutManager/pipe" to="Puzzle/CutoutManager/pipe" method="_on_mouse_shape_exited"]
[connection signal="mouse_shape_entered" from="Puzzle/CutoutManager/n" to="Puzzle/CutoutManager/n" method="_on_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="Puzzle/CutoutManager/n" to="Puzzle/CutoutManager/n" method="_on_mouse_shape_exited"]
[connection signal="mouse_shape_entered" from="Puzzle/CutoutManager/pas" to="Puzzle/CutoutManager/pas" method="_on_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="Puzzle/CutoutManager/pas" to="Puzzle/CutoutManager/pas" method="_on_mouse_shape_exited"]
